--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "require": {
 		"monolog/monolog": "*",
-        "fabpot/goutte": "2.0.2"
+        "fabpot/goutte": "*"
     },
 	"require-dev": {
 		"phpunit/phpunit": "4.1.*"
